--- a/miredot.htmlintro.html
+++ b/miredot.htmlintro.html
@@ -1,6 +1,5 @@
 <h1>ICAT Restful API</h1>
 
-<h2>Getting started</h2>
 <p>ICAT provides both a SOAP and a RESTful web service to
 	communicate with the core ICAT code which makes calls to a relational
 	DBMS. This document describes the RESTful interface but assumes some
@@ -16,7 +15,7 @@
 	will always be "INTERNAL", the offset will always be omitted and the
 	status code will be 500 ("Internal Server Error"). Clients should
 	always check the status code and if status/100 is not 2 then an error
-	has occured.</p>
+	has occurred.</p>
 
 <h2>Testing</h2>
 <p>
@@ -28,7 +27,7 @@
 </p>
 
 <h2>Getting started</h2>
-<p>The fist thing you will need is a session so please see the
+<p>The first thing you will need is a session so please see the
 	documentation on POST to a session resource.</p>
 
 <h2>Import and export</h2>
