Fix #155 I get an internal error from the server when I search for "Study INCLUDE StudyInvestigation":

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -20,7 +20,7 @@
 		<li>Changes to properties files to work with container
 			independent setup script.</li>
 		<li>Change from log4j to slf4j with logback</li>
-
+		<li>Corrected the "Study" entity to avoid NullPointer exceptions</li>
 	</ul>
 
 	<h1>4.5.1</h1>
