Fix #156 Excessive memory needed to populate lucene index.
Also improved logging levels

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -21,6 +21,7 @@
 			independent setup script.</li>
 		<li>Change from log4j to slf4j with logback</li>
 		<li>Corrected the "Study" entity to avoid NullPointer exceptions</li>
+		<li>Fixed a resource leak in lucene populate</li>
 	</ul>
 
 	<h1>4.5.1</h1>
