Tidying up a bit

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -4,7 +4,9 @@
 </head>
 <body>
 
-	<h1>4.6.0</h1>
+	<h1>ICAT Server Release Notes</h1>
+
+	<h2>4.6.0</h2>
 	<p>Small change to icat.properties</p>
 	<ul>
 		<li>notification.list and log.list may now be omitted but must
@@ -24,10 +26,10 @@
 		<li>Fixed a resource leak in lucene populate</li>
 	</ul>
 
-	<h1>4.5.1</h1>
+	<h2>4.5.1</h2>
 	<p>Fix bug where ICAT won't start up with an empty lucene index</p>
 
-	<h1>4.5.0</h1>
+	<h2>4.5.0</h2>
 	<p>Remove lucene calls and apply bug fixes.</p>
 	<ul>
 		<li>Permit lucene not to be used by omitting references in
@@ -73,7 +75,7 @@
 		<li>The restful calls now produce CORS headers.</li>
 	</ul>
 
-	<h1>4.4.0</h1>
+	<h2>4.4.0</h2>
 	<p>This introduces a number of "RESTful" calls and has some other
 		small improvements and bug fixes.</p>
 	<ul>
@@ -118,7 +120,7 @@
 			default of 255 to 1024.</li>
 	</ul>
 
-	<h1>4.3.3</h1>
+	<h2>4.3.3</h2>
 	<p>This is a bug fix release with support for a group of ICATs
 		working together. It is not a cluster in the Glassfish sense.</p>
 	<ul>
@@ -143,14 +145,14 @@
 		<li>Fixed bug with handling of unary minus.</li>
 	</ul>
 
-	<h1>4.3.2</h1>
+	<h2>4.3.2</h2>
 	<p>This is a bug fix release.</p>
 	<ul>
 		<li>A get call using the old (non-JPQL) syntax will now accept
 			the INCLUDE keyword in lower or mixed case.</li>
 	</ul>
 
-	<h1>4.3.1</h1>
+	<h2>4.3.1</h2>
 	<p>This is a bug fix release.</p>
 	<ul>
 		<li>The methods logout and refresh when called with an expired or
@@ -163,7 +165,7 @@
 			by getParameters and setParameters.</li>
 	</ul>
 
-	<h1>4.3.0</h1>
+	<h2>4.3.0</h2>
 	<p>This includes schema changes and a number of speculative
 		features.</p>
 	<ul>
@@ -244,7 +246,7 @@
 			script which works both on Linux and Windows.</li>
 	</ul>
 
-	<h1>4.2.5</h1>
+	<h2>4.2.5</h2>
 	<p>
 		This is a bug fix release. If you already have 4.2.0, 4.2.1, 4.2.2,
 		4.2.3 or 4.2.4 installed, then simply remove the old ear file and
@@ -268,7 +270,7 @@
 			file packaged within the .ear file will be used.</li>
 	</ul>
 
-	<h1>4.2.4</h1>
+	<h2>4.2.4</h2>
 	<p>This is a bug fix release. If you already have 4.2.0, 4.2.1,
 		4.2.2 or 4.2.3 installed, then simply remove the old ear file and
 		deploy the new one.</p>
@@ -284,7 +286,7 @@
 			deployment instructions.</li>
 	</ul>
 
-	<h1>4.2.3</h1>
+	<h2>4.2.3</h2>
 	<p>This is a bug fix release. If you already have 4.2.0, 4.2.1 or
 		4.2.2 installed, then simply remove the old ear file and deploy the
 		new one.</p>
@@ -299,7 +301,7 @@
 			now fixed.</li>
 	</ul>
 
-	<h1>4.2.2</h1>
+	<h2>4.2.2</h2>
 	<p>This is a bug fix release. If you already have 4.2.0 or 4.2.1
 		installed, then simply remove the old ear file and deploy the new one.</p>
 	<ul>
@@ -309,7 +311,7 @@
 			list of INCLUDES a null pointer exception is no longer thrown.</li>
 	</ul>
 
-	<h1>4.2.1</h1>
+	<h2>4.2.1</h2>
 	<p>This is a bug fix release. If you already have 4.2.0 installed,
 		then simply remove the old ear file and deploy the new one.</p>
 	<ul>
@@ -324,7 +326,7 @@
 			fixed.</li>
 	</ul>
 
-	<h1>4.2.0</h1>
+	<h2>4.2.0</h2>
 	<p>This introduces a clean mechanism for handling authentication
 		plugins and provides significant speed enhancements.</p>
 	<ul>
@@ -351,7 +353,7 @@
 
 	</ul>
 
-	<h1>4.1.1</h1>
+	<h2>4.1.1</h2>
 	<p>This is a bug fix release.</p>
 	<ul>
 		<li>Aggregate functions (MIN, MAX, AVG, COUNT etc) no longer
@@ -359,7 +361,7 @@
 		<li>Minor improvements to the installation documentation.</li>
 	</ul>
 
-	<h1>4.1.0</h1>
+	<h2>4.1.0</h2>
 	<p>This is the first release of ICAT4 which is meant to be
 		approaching production quality.</p>
 	<ul>
@@ -375,19 +377,19 @@
 		<li>More regular schema with simple provenance mechanism</li>
 	</ul>
 
-	<h1>4.0.0</h1>
+	<h2>4.0.0</h2>
 	<p>Technology preview release - not for production use</p>
 	<ul>
 		<li>Many changes to the API</li>
 	</ul>
 
-	<h1>3.3.4</h1>
+	<h2>3.3.4</h2>
 	<ul>
 		<li>Changed the JPA provider from TopLink to EclipseLink</li>
 		<li>Removed Dataportal from the installation</li>
 	</ul>
 
-	<h1>3.3.3</h1>
+	<h2>3.3.3</h2>
 	<p>Public release</p>
 
 </body>
