Add delete to restful API and ensure that create errors give good messages

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -9,7 +9,8 @@
 	<h2>4.7.0</h2>
 	<p>Enhanced Rest interface and changes to the authorization code</p>
 	<ul>
-		<li>A select can mention multiple quantities to be returned</li>
+		<li>A restful select can mention multiple quantities to be
+			returned</li>
 		<li>A major re-write of the authorization code should make it
 			more efficient in most cases as all the work is carried out by the
 			database unless the INCLUDE mechanism is used.</li>
@@ -27,6 +28,7 @@
 					properly.</li>
 			</ul>
 		</li>
+		<li>A restful delete call has been added</li>
 	</ul>
 
 	<h2>4.6.0</h2>
