--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -13,9 +13,11 @@
 			returned</li>
 		<li>A major re-write of the authorization code should make it
 			more efficient in most cases as all the work is carried out by the
-			database unless the INCLUDE mechanism is used.</li>
-		<li>COUNT queries will not fail because they are are counting
-			more than maxEntities values</li>
+			database unless the INCLUDE mechanism is used. This has required that
+			the Rule table has a slightly different structure from 4.6.0 so the
+			correct upgrade procedure from earlier versions must be followed.</li>
+		<li>COUNT queries will not fail because they are counting more
+			than maxEntities values</li>
 		<li>A couple of bugs in eclipse link result in incorrect
 			information being returned. One of these bugs was trapped previously
 			but with the generality of the queries now supported it has become
@@ -29,6 +31,15 @@
 			</ul>
 		</li>
 		<li>A restful delete call has been added</li>
+		<li>The delete(Many) call, whether restful or not, checks the
+			authz rules for all objects that will be deleted by the cascade
+			mechanism.</li>
+		<li>A restful write call to do both create(Many) and update(Many)
+			has been written. Notifications are sent for all objects created
+			and/or updated. Authz is also applied to all new or updated entries.</li>
+		<li>Notifications are no longer generated for deletes as the
+			information could never be used. This means that only C and U are
+			valid notification letters in the icat.properties file.</li>
 	</ul>
 
 	<h2>4.6.0</h2>
