Use multithreading and improve the query that loops over all entities of one type to make the lucene populate go faster. Update to last lucene v 4

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -24,6 +24,8 @@
 		<li>Change from log4j to slf4j with logback</li>
 		<li>Corrected the "Study" entity to avoid NullPointer exceptions</li>
 		<li>Fixed a resource leak in lucene populate</li>
+		<li>Lucene populate is now much faster. This is mainly because it
+			uses multiple threads</li>
 	</ul>
 
 	<h2>4.5.1</h2>
