Prepare for 4.6.0 release

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -26,6 +26,9 @@
 		<li>Fixed a resource leak in lucene populate</li>
 		<li>Lucene populate is now much faster. This is mainly because it
 			uses multiple threads</li>
+		<li>It is recommended to avoid this version of ICAT if you are
+			using multiple icat servers as testing of such configurations has not
+			been carried out.</li>
 	</ul>
 
 	<h2>4.5.1</h2>
