Fix #158 DOIs for DataCollection - new attribute

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -40,6 +40,7 @@
 		<li>Notifications are no longer generated for deletes as the
 			information could never be used. This means that only C and U are
 			valid notification letters in the icat.properties file.</li>
+		<li>As DataCollection now has a doi attribute</li>
 	</ul>
 
 	<h2>4.6.0</h2>
