--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -40,7 +40,11 @@
 		<li>Notifications are no longer generated for deletes as the
 			information could never be used. This means that only C and U are
 			valid notification letters in the icat.properties file.</li>
-		<li>As DataCollection now has a doi attribute</li>
+		<li>DataCollection now has a doi attribute</li>
+		<li>Call logging has been changed to generate only jms messages.
+			It is very similar to the call logging in the IDS. It is controlled
+			by a log.list in the icat.properties which may contain one or more of
+			READ, WRITE, SESSION and INFO.
 	</ul>
 
 	<h2>4.6.0</h2>
