Fix #127 Update rules do not work as expected Fix #164 Old configuration parameters on icat.properties.example

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -45,6 +45,9 @@
 			It is very similar to the call logging in the IDS. It is controlled
 			by a log.list in the icat.properties which may contain one or more of
 			READ, WRITE, SESSION and INFO.</li>
+		<li>Updates whether from the SOAP call or the restful write call
+			are both checked for UPDATE permission before the call and CREATE
+			permission after the call.</li>
 	</ul>
 
 	<h2>4.6.1</h2>
