Issue #167 Add an attribute "orcid" to User. Two attributes have been added orcidId and email.

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -48,6 +48,7 @@
 		<li>Updates whether from the SOAP call or the restful write call
 			are both checked for UPDATE permission before the call and CREATE
 			permission after the call.</li>
+		<li>Added attributes email and orchidId to the User table</li>
 	</ul>
 
 	<h2>4.6.1</h2>
