Fix #169 testicat and icatadmin need certs

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -49,6 +49,9 @@
 			are both checked for UPDATE permission before the call and CREATE
 			permission after the call.</li>
 		<li>Added attributes email and orcidId to the User table</li>
+		<li>testicat and icatadmin have certificates checking disabled.
+			This used to be the normal behaviour but newer version of python, by
+			default, expect a certificate accessible by openssl.</li>
 	</ul>
 
 	<h2>4.6.1</h2>
