Add isLoggedIn to fix #170

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -56,6 +56,7 @@
 			default, expect a certificate accessible by openssl.</li>
 		<li>Produce an error message rather than a null pointer exception
 			if an invalid authenticator mnemonic is used in a login call.</li>
+		<li>Added "isLogedIn" REST call</li>
 	</ul>
 
 	<h2>4.6.1</h2>
