Prepare for 4.7.0 release

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -62,6 +62,10 @@
 			string values.</li>
 		<li>Fixed bug trying to read back an individual date value
 			through a REST call.</li>
+		<li>Remove db.vendor and add db.target and db.logging to
+			icat-setup.properties.</li>
+		<li>The jdbc driver jar if present in the domain's lib directory
+			must be moved to lib/ext.</li>
 	</ul>
 
 	<h2>4.6.1</h2>
