Fix #176 NullPointerException is thrown when trying to use an invalid authenticator.
This was only a problem for the SOAP API the rest API was OK

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,13 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.7.1</h2>
+	<p>Bug fixes</p>
+	<ul>
+		<li>Protect the SOAP interface from bad plugin mnemonics on login
+			calls</li>
+	</ul>
+
 	<h2>4.7.0</h2>
 	<p>Enhanced Rest interface and changes to the authorization code</p>
 	<ul>
