--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,11 +6,14 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
-	<h2>4.7.1</h2>
-	<p>Bug fixes</p>
+	<h2>4.8.0</h2>
+	<p>Support update operations with control on individual attributes
+		and bug fixes</p>
 	<ul>
 		<li>Protect the SOAP interface from bad plugin mnemonics on login
 			calls</li>
+		<li>Support update operations with control on individual
+			attributes</li>
 	</ul>
 
 	<h2>4.7.0</h2>
