--- a/miredot.intro.html
+++ b/miredot.intro.html
@@ -1,9 +1,11 @@
 <h1>ICAT Restful API</h1>
 
-<p>ICAT provides both a SOAP and a RESTful web service to
-	communicate with the core ICAT code which makes calls to a relational
-	DBMS. This document describes the RESTful interface but assumes some
-	knowledge of ICAT as explained in the ICAT Java Client manual.</p>
+<p>
+	ICAT provides both a SOAP and a RESTful web service to communicate with
+	the core ICAT code which makes calls to a relational DBMS. This
+	document describes the RESTful interface but assumes some knowledge of
+	ICAT as explained in the <a href="../user.html">ICAT user manual</a>.
+</p>
 
 <h2>Error handling</h2>
 <p>In the case of an error from the ICAT code the returned json will
@@ -23,7 +25,7 @@
 	make any of the calls. For example a url of the form:
 	<kbd> https://example.com:443/icat/version</kbd>
 	will return some json such as
-	<samp>{"version":"4.6.0"}</samp>
+	<samp>{"version":"4.8.0"}</samp>
 </p>
 
 <h2>Getting started</h2>
