--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -14,6 +14,7 @@
 			calls</li>
 		<li>Support update operations with control on individual
 			attributes</li>
+		<li>The testicat program has been recoded to use only REST calls.</li>
 	</ul>
 
 	<h2>4.7.0</h2>
