--- a/src/site/xhtml/user.xhtml
+++ b/src/site/xhtml/user.xhtml
@@ -69,7 +69,7 @@
 		package provides streaming and non-streaming libraries and the Python
 		json library allows for conversion between JSON and Python object
 		trees made up of lists and dictionaries.The calls are listed in the <a
-			href="miredot/">REST interface.</a>
+			href="miredot/index.html">REST interface.</a>
 	</p>
 
 	<h2>Session Management</h2>
