--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -15,6 +15,7 @@
 		<li>Support update operations with control on individual
 			attributes</li>
 		<li>The testicat program has been recoded to use only REST calls.</li>
+		<li>A new clone operation has been added to the REST interface</li>
 	</ul>
 
 	<h2>4.7.0</h2>
