Deal with digests on Datafile.location

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -16,6 +16,10 @@
 			attributes</li>
 		<li>The testicat program has been recoded to use only REST calls.</li>
 		<li>A new clone operation has been added to the REST interface</li>
+		<li>A new property "key" may be specified in the icat.properties
+			file. If there is an IDS server in use and it has a key for digest
+			protection of Datafile.location then this key value must be
+			identical.</li>
 	</ul>
 
 	<h2>4.7.0</h2>
