Fix #183 Issue when generating Lucene Index Fix #184 AuthenticatorInfo more complex than needed

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,15 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.9.0</h2>
+	<p>Add SOAP call getAuthenticatorInfo and bug fixes</p>
+	<ul>
+		<li>Simplify output from REST properties call</li>
+		<li>Add SOAP call getAuthenticatorInfo</li>
+		<li>Add SOAP call getVersion() which is identical to
+			getApiVersion()</li>
+	</ul>
+
 	<h2>4.8.0</h2>
 	<p>Support update operations with control on individual attributes
 		and bug fixes</p>
