Remove the LoggingConfigurator

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -13,6 +13,11 @@
 		<li>Add SOAP call getAuthenticatorInfo</li>
 		<li>Add SOAP call getVersion() which is identical to
 			getApiVersion()</li>
+		<li>icat.properties no longer has the logback.xml property. Any
+			logback.xml file in the installation directory will be applied but
+			will not be copied to the config directory. There is a
+			logback.xml.example file in the distribution which can be copied to
+			logback.xml and edited.</li>
 	</ul>
 
 	<h2>4.8.0</h2>
