Support restful authenticators as well as EJBs

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -7,7 +7,8 @@
 	<h1>ICAT Server Release Notes</h1>
 
 	<h2>4.9.0</h2>
-	<p>Add SOAP call getAuthenticatorInfo and bug fixes</p>
+	<p>Add SOAP call getAuthenticatorInfo, support of authenticator
+		services and bug fixes</p>
 	<ul>
 		<li>Simplify output from REST properties call</li>
 		<li>Add SOAP call getAuthenticatorInfo</li>
@@ -18,6 +19,8 @@
 			will not be copied to the config directory. There is a
 			logback.xml.example file in the distribution which can be copied to
 			logback.xml and edited.</li>
+		<li>An authenticator may be a restful web service rather than a
+			possibly remote EJB.</li>
 	</ul>
 
 	<h2>4.8.0</h2>
