--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -21,6 +21,10 @@
 			logback.xml and edited.</li>
 		<li>An authenticator may be a restful web service rather than a
 			possibly remote EJB.</li>
+		<li>The lucene calls are now handled by a separate server
+			allowing deployment of more than one ICAT to share a single lucene
+			server. Most of the lucene configuration has been moved to the lucene
+			server.</li>
 	</ul>
 
 	<h2>4.8.0</h2>
