Needs a few more properties then ready to go

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -7,8 +7,8 @@
 	<h1>ICAT Server Release Notes</h1>
 
 	<h2>4.9.0</h2>
-	<p>Add SOAP call getAuthenticatorInfo, support of authenticator
-		services and bug fixes</p>
+	<p>Add SOAP call getAuthenticatorInfo, support of authenticator and
+		lucene services and bug fixes</p>
 	<ul>
 		<li>Simplify output from REST properties call</li>
 		<li>Add SOAP call getAuthenticatorInfo</li>
