Fix #191 which was making update calls very expensive

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -25,6 +25,8 @@
 			allowing deployment of more than one ICAT to share a single lucene
 			server. Most of the lucene configuration has been moved to the lucene
 			server.</li>
+		<li>Fix bug in update which was making it very slow when lucene
+			was enabled</li>
 	</ul>
 
 	<h2>4.8.0</h2>
