--- a/src/site/xhtml/soap.xhtml
+++ b/src/site/xhtml/soap.xhtml
@@ -770,11 +770,11 @@
 
 	<p>To be authorized to use administration calls you must be
 		authenticated with a name listed in the rootUserNames in the
-		icat.properties file.</p>
+		run.properties file.</p>
 	<p class="call">List&lt;String&gt; getProperties(String sessionId)
 	</p>
 
-	<p>lists the active contents of the icat.properties file. It does
+	<p>lists the active contents of the run.properties file. It does
 		this by examining the properties after they have been read in so any
 		superfluous definitions in the original properties file will not be
 		seen. The current physical file is not re-examined</p>
