Prepare for 4.9.0 release

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -29,8 +29,10 @@
 			server.</li>
 		<li>Fix bug in update which was making it very slow when lucene
 			was enabled</li>
-
 		<li>Works with Payara</li>
+		<li>Synchronization of public tables and public steps is now done
+			by restful calls rather than JMS. This means that the run.properties
+			file needs a list of other servers to synchronize with.</li>
 	</ul>
 
 	<h2>4.8.0</h2>
