Abandon Glassfish 4.0 and 4.1.1

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -29,7 +29,7 @@
 			server.</li>
 		<li>Fix bug in update which was making it very slow when lucene
 			was enabled</li>
-		<li>Works with Payara</li>
+		<li>Works with Payara but has intermittent problems with Glassfish 4.0 and 4.1.1 so please use payara41.</li>
 		<li>Synchronization of public tables and public steps is now done
 			by restful calls rather than JMS. This means that the run.properties
 			file needs a list of other servers to synchronize with.</li>
