--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,16 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.10.0</h2>
+	<p>Make some additions to the schema</p>
+	<ul>
+		<li>Add an attribute pid to Instrument, ParameterType, and Sample
+			(Issue 198).</li>
+		<li>Add an optional relation between Shift and Instrument (Issue 199).</li>
+		<li>Add attributes familyName, givenName, and affiliation to User
+			(Issue 201).</li>
+	</ul>
+
 	<h2>4.9.1</h2>
 	<p>Bug fixes</p>
 	<ul>
