Upgrade dependency and release-notes

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,13 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.9.3</h2>
+	<p>Bug fixes</p>
+	<ul>
+		<li>Make the message transmitters more fault-tolerant.</li>
+		<li>Upgrade commons-fileupload from 1.3 to 1.3.3 because of security vulnerabilities (<a href="https://nvd.nist.gov/vuln/detail/CVE-2016-3092">CVE-2016-3092</a>, <a href="https://nvd.nist.gov/vuln/detail/CVE-2016-1000031">CVE-2016-1000031</a>, <a href="https://nvd.nist.gov/vuln/detail/CVE-2014-0050">CVE-2014-0050</a>).</li>
+	</ul>
+
 	<h2>4.9.2</h2>
 	<p>Bug fixes</p>
 	<ul>
