Added documentation for addition of PID field to Study

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -14,6 +14,7 @@
 		<li>Add an optional relation between Shift and Instrument (Issue 199).</li>
 		<li>Add attributes familyName, givenName, and affiliation to User
 			(Issue 201).</li>
+		<li>Add an attribute pid to Study (Issue 216).</li>
 	</ul>
 
 	<h2>4.9.3</h2>
