Correct column type for Oracle DB. Fixes #224.

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -15,6 +15,8 @@
 		<li>Add attributes familyName, givenName, and affiliation to User
 			(Issue 201).</li>
 		<li>Add an attribute pid to Study (Issue 216).</li>
+		<li>Add an attribute endDate to Study (Issue 219).</li>
+		<li>Fixes bugs in converting some types to JSON (Issue 220 and 196).</li>
 	</ul>
 
 	<h2>4.9.3</h2>
