add upgrade scripts and release notes

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,14 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.11.0</h2>
+	<p>Make additions to the schema</p>
+	<ul>
+		<li>Add tables DataPublication, DataPublicationDate,
+		DataPublicationUser, RelatedIdentifier, and FundingReference. (Issue
+		200).</li>
+	</ul>
+
 	<h2>4.10.0</h2>
 	<p>Make some additions to the schema</p>
 	<ul>
