--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,12 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>5.0.0</h2>
+	<p>Make additions to the schema</p>
+	<ul>
+		<li>Add a relationship between Dataset and Instrument (Issue 228).</li>
+	</ul>
+
 	<h2>4.10.0</h2>
 	<p>Make some additions to the schema</p>
 	<ul>
