--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,13 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>5.0.0</h2>
+	<p>Make additions to the schema</p>
+	<ul>
+		<li>Make the relationship between Sample and Investigation many-to-many
+		(Issue 231).</li>
+	</ul>
+
 	<h2>4.10.0</h2>
 	<p>Make some additions to the schema</p>
 	<ul>
