--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,13 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.11.0</h2>
+	<p>Update SOAP interface</p>
+	<ul>
+		<li>Enable multiple field selection via SOAP interface 
+			(Issue 245).</li>
+	</ul>
+
 	<h2>4.10.0</h2>
 	<p>Make some additions to the schema</p>
 	<ul>
