Update version number & updated release-notes

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -7,10 +7,12 @@
 	<h1>ICAT Server Release Notes</h1>
 
 	<h2>4.11.0</h2>
-	<p>Update SOAP interface</p>
+	<p>Update SOAP interface & Python 3 compatibility</p>
 	<ul>
 		<li>Enable multiple field selection via SOAP interface 
 			(Issue 245).</li>
+		<li>Make python scripts python3 compatible and upgrade icat.utils version to 4.16.1
+			(PR 226).</li>
 	</ul>
 
 	<h2>4.10.0</h2>
