Update release notes

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -7,7 +7,7 @@
 	<h1>ICAT Server Release Notes</h1>
 
 	<h2>4.11.0</h2>
-	<p>Update SOAP interface & Python 3 compatibility</p>
+	<p>Update SOAP interface and Python 3 compatibility</p>
 	<ul>
 		<li>Enable multiple field selection via SOAP interface 
 			(Issue 245).</li>
