Prepare for release 4.11.1

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,9 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.11.1</h2>
+	<p>Re-release to fix permissions and encoding issues with 4.11.0</p>
+
 	<h2>4.11.0</h2>
 	<p>Update SOAP interface and Python 3 compatibility</p>
 	<ul>
