--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -16,6 +16,7 @@
 			RelatedIdentifier, and FundingReference (Issue 200).</li>
 		<li>Add tables DataPublicationFunding and InvestigationFunding (Issue 249).</li>
 		<li>Add table Affiliation (Issue 248).</li>
+		<li>Add tables DataPublicationType and DataCollectionInvestigation (Issue 261).</li>
 	</ul>
 
 	<h2>4.11.1</h2>
