Updated RelatedIdentifier to RelatedItem

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -13,7 +13,7 @@
 		<li>Add entity classes Technique and DatasetTechnique (Issue 230).</li>
 		<li>Add columns for investigation and dataset size (Issue 211) and fileCount (Issue 238).</li>
 		<li>Add tables DataPublication, DataPublicationDate, DataPublicationUser,
-			RelatedIdentifier, and FundingReference (Issue 200).</li>
+			RelatedItem, and FundingReference (Issue 200).</li>
 		<li>Add tables DataPublicationFunding and InvestigationFunding (Issue 249).</li>
 		<li>Add table Affiliation (Issue 248).</li>
 		<li>Add tables DataPublicationType and DataCollectionInvestigation (Issue 261).</li>
