Add 4.11.2 release notes

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,9 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>4.11.2</h2>
+	<p>Fix authorization of lists of ICAT entities</p>
+
 	<h2>4.11.1</h2>
 	<p>Re-release to fix permissions and encoding issues with 4.11.0</p>
 
