Update release notes and installation instructions

--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,9 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>6.0.0</h2>
+	<p>Upgrade from JavaEE to JakartaEE 10. Requires Java 11+ and an application server that supports JakartaEE 10 such as Payara 6.</p>
+
 	<h2>5.0.1</h2>
 	<p>Fix authorization of lists of ICAT entities and use Python3 for scripts</p>
 
