--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,9 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>5.0.2</h2>
+	<p>Ensures that authorization rules are read in a separate transaction.</p>
+
 	<h2>5.0.1</h2>
 	<p>Fix authorization of lists of ICAT entities and use Python3 for scripts</p>
 
