--- a/src/site/xhtml/release-notes.xhtml
+++ b/src/site/xhtml/release-notes.xhtml
@@ -6,6 +6,9 @@
 
 	<h1>ICAT Server Release Notes</h1>
 
+	<h2>5.0.3</h2>
+	<p>Move the Session table to a separate persistence context</p>
+
 	<h2>5.0.2</h2>
 	<p>Ensures that authorization rules are read in a separate transaction.</p>
 
